--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
     sdk: flutter
   firebase_auth: ^5.3.4
   image_picker: ^0.8.5+3
+  cloud_firestore: ^5.0.0
+  intl: ^0.18.0
+  shared_preferences: ^2.1.1
+  path_provider: ^2.0.14
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
