--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,13 @@ dependencies:
   shared_preferences: ^2.1.1
   path_provider: ^2.0.14
   firebase_messaging: ^15.1.6
+  flutter_local_notifications: ^18.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: 3.8.1
   google_fonts: ^5.0.0
+  http: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
